--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             if (localStorage.getItem('themeType') == 'season') UISEDT = SEASON
             if (localStorage.getItem('themeType') == 'time') UISEDT = DAYTIMER
 
+            var NOBLUR = navigator.userAgent.includes('Windows') && navigator.userAgent.includes('Chrome')
+
             var monthList = ['января', 'февраля', 'марта', 'апреля', 'мая', 'июня', 'июля', 'августа', 'сентября', 'октября', 'ноября', 'декабря']
 
             document.addEventListener("click", (event) => {
@@ -128,12 +130,12 @@
                         --text-color:                 #151515  ;
                         --text-color-active:          #202020  ;
                         --bg-color:                   var(--back-page);
-                        --bg-modal-color:             #dcdcdccc;
-                        --con-color:                  #dededecc;
-                        --con-color-hover:            #d0d0d0cc;
-                        --con-color-active:           #cacacacc;
+                        --bg-modal-color:             #e9e9e9${NOBLUR ? '' : 'cc'};
+                        --con-color:                  #dedede${NOBLUR ? '' : 'cc'};
+                        --con-color-hover:            #d0d0d0${NOBLUR ? '' : 'cc'};
+                        --con-color-active:           #cacaca${NOBLUR ? '' : 'cc'};
                         --con-alt-color:              #abababcc;
-                        --line-general-color:         #cacaca40;
+                        --line-general-color:         #c0c0c040;
                         --icon-color:                 #00000040;
 
                         --UI-icon-neutral:            #707070  ;
@@ -155,13 +157,13 @@
                     `,
                     UIdark: `
                         --back-page:                  #000000  ;
-                        --text-color:                 #f4f4f4cc;
-                        --text-color-active:          #eeeeeecc;
+                        --text-color:                 #f4f4f4  ;
+                        --text-color-active:          #eeeeee  ;
                         --bg-color:                   var(--back-page);
-                        --bg-modal-color:             #101010cc;
-                        --con-color:                  #151515cc;
-                        --con-color-hover:            #202020cc;
-                        --con-color-active:           #252525cc;
+                        --bg-modal-color:             #101010${NOBLUR ? '' : 'cc'};
+                        --con-color:                  #151515${NOBLUR ? '' : 'cc'};
+                        --con-color-hover:            #202020${NOBLUR ? '' : 'cc'};
+                        --con-color-active:           #252525${NOBLUR ? '' : 'cc'};
                         --con-alt-color:              #303030cc;
                         --line-general-color:         #60606040;
                         --icon-color:                 #70707040;
@@ -261,7 +263,7 @@
                                 <div class="full-max-modal" id="full-max-modal">
                                     <style>
                                         div#full-modal { top: 100%; position: fixed; height: 100vh; width: 100vw; display: flex; justify-content: center; align-items: flex-end; z-index: 99; }
-                                        div#full-max-modal { width: 100%; height: calc(100vh - 32px); overflow-y: auto; background: var(--bg-modal-color); backdrop-filter: blur(30px); --webkit-backdrop-filter: blur(30px); border-radius: 24px 24px 0 0; }
+                                        div#full-max-modal { width: 100%; height: calc(100vh - 32px); overflow-y: auto; background: var(--bg-modal-color); ${NOBLUR ? '' : 'backdrop-filter: blur(30px); --webkit-backdrop-filter: blur(30px);'} border-radius: 24px 24px 0 0; }
                                     </style>
                                     <div style="margin: 16px 0; display: flex; justify-content: center;">
                                         <div onclick="UX.closeModal('fullscreen')" style="background: var(--con-alt-color); height: 8px; width: 100px; border-radius: 100px;"></div>
@@ -424,16 +426,23 @@
                     counter: async (id) => {
                         let event = JSON.parse(sessionStorage.getItem(`id${id}`))
                         let dataInfo = ''
-                        if (event.type == 'dayInYear' || event.type == 'timeInYear') {
+                        if (event.type == 'dayInYear') {
                             let dd1 = UX.dateThisYear(event.date, event.time)
                             dataInfo += `
                             раз в год: ${event.date.split('-')[1]} ${monthList[event.date.split('-')[0] - 1]}<br>
-                            отмечается уже ${plutonny.UI.rus('year', (DYNAMICTIME.getFullYear() - event.startFrom - ((dd1 > DYNAMICTIME) ? 1 : 0)))}
+                            отмечается уже ${plutonny.UI.rus('year', (DYNAMICTIME.getFullYear() - event.startFrom - ((dd1 > DYNAMICTIME) ? 1 : 0)))} (с ${event.startFrom})
+                            `
+                        }
+                        if (event.type == 'timeInYear') {
+                            let dd2 = UX.dateThisYear(event.date, event.time)
+                            dataInfo += `
+                            раз в год: ${event.date.split('-')[1]} ${monthList[event.date.split('-')[0] - 1]}, ${event.time}<br>
+                            отмечается уже ${plutonny.UI.rus('year', (DYNAMICTIME.getFullYear() - event.startFrom - ((dd2 > DYNAMICTIME) ? 1 : 0)))} (с ${event.startFrom})
                             `
                         }
                         if (event.type == 'once') {
                             dataInfo += `
-                            период с ${event.Sdate.split('-')[2]} ${monthList[event.Sdate.split('-')[1] - 1]} ${event.Sdate.split('-')[0]} по ${event.Edate.split('-')[2]} ${monthList[event.Edate.split('-')[1] - 1]} ${event.Edate.split('-')[0]}<br>
+                            период с ${event.Stime} ${event.Sdate.split('-')[2]} ${monthList[event.Sdate.split('-')[1] - 1]} ${event.Sdate.split('-')[0]} по ${event.Etime} ${event.Edate.split('-')[2]} ${monthList[event.Edate.split('-')[1] - 1]} ${event.Edate.split('-')[0]}<br>
                             `
                         }
                         await plutonny.sleep(500)
@@ -753,8 +762,8 @@
                 let dbc = []
                 let dbd = []
                 for (let i = 1; i <= counters.count; i++) {
-                    let cd = null
-                    if (counters[i].date == undefined) cd = new Date(`${counters[i].Edate} ${counters[i].Etime}`)
+                    let cd
+                    if (counters[i].type == 'once') cd = new Date(`${counters[i].Edate} ${counters[i].Etime}`)
                     else cd = new Date(`${DYNAMICTIME.getFullYear()}-${counters[i].date}`)
                     if ((cd - DYNAMICTIME) > 0) dbc.push([i, cd.getTime()])
                 }
@@ -788,7 +797,7 @@
                 },
                 clearModal: () => {
                     UX.modal('dialog', `
-                        <div style="backdrop-filter: blur(10px); --webkit-backdrop-filter: blur(10px); width: 100%; background: var(--con-color); border-radius: 24px;">
+                        <div style="width: 100%; background: var(--con-color); border-radius: 24px;">
                             <div style="height: 18px;"></div>
                             <h2 class="bold" style="text-align: center;">уверены в своем решении?</h2>
                             <div style="height: 24px;"></div>
@@ -800,7 +809,7 @@
                             <div style="height: 18px;"></div>
                         </div>
                         <div style="height: 24px;"></div>
-                        <div style="backdrop-filter: blur(10px); --webkit-backdrop-filter: blur(10px); width: 100%; border-radius: 24px; display: flex;flex-direction: column; border-radius: 24px; overflow: hidden;">
+                        <div style="width: 100%; border-radius: 24px; display: flex;flex-direction: column; border-radius: 24px; overflow: hidden;">
                             <button style="background: var(--con-color); height: 52px; border-radius: 0px; color: #ff0000;" class="bold" onclick="dataSet.clear()">УДАЛИТЬ</button>
                             <div style="height: 1px; background: var(--con-alt-color);"></div>
                             <button style="background: var(--con-color); height: 52px; border-radius: 0px;" onclick="UX.closeModal('dialog')">отмена</button>
@@ -823,7 +832,7 @@
                     UX.closeModal('dialog')
                     await plutonny.sleep(700)
                     UX.modal('dialog', `
-                    <div style="backdrop-filter: blur(10px); --webkit-backdrop-filter: blur(10px); width: 100%; background: var(--bg-modal-color); border-radius: 24px;">
+                    <div style="width: 100%; background: var(--bg-modal-color); border-radius: 24px;">
                         <div style="height: 18px;"></div>
                         <h2 class="bold" style="text-align: center;">успешно!</h2>
                         <div style="height: 24px;"></div>
@@ -831,7 +840,7 @@
                         <div style="height: 18px;"></div>
                     </div>
                     <div style="height: 24px;"></div>
-                    <div style="backdrop-filter: blur(10px); --webkit-backdrop-filter: blur(10px); width: 100%; border-radius: 24px; display: flex;flex-direction: column; border-radius: 24px; overflow: hidden;">
+                    <div style="width: 100%; border-radius: 24px; display: flex;flex-direction: column; border-radius: 24px; overflow: hidden;">
                         <button style="background: var(--bg-modal-color); height: 52px; border-radius: 0px;" onclick="location.reload()">перезагрузить</button>
                     </div>
                     `)
